tests/invalid/sorted_wrong_arg_count/main.py
xs: list[int] = [3, 1, 2]
ys: list[int] = sorted(xs, xs)
